--- a/task2/Views/Grid/Index.cshtml
+++ b/task2/Views/Grid/Index.cshtml
@@ -14,10 +14,11 @@
             toolbar.Create();
       })
       .Editable(editable => editable.Mode(GridEditMode.InLine))
-      .Selectable(selectable => {
-            selectable.Mode(GridSelectionMode.Single);
-            selectable.Type(GridSelectionType.Row);
+      .Pageable()
+      .Sortable(sortable => {
+          sortable.SortMode(GridSortMode.MultipleColumn);
       })
+      .Filterable()
       .Scrollable()
       .DataSource(dataSource => dataSource
           .Ajax()
