--- a/task2/Views/Journals/Index.cshtml
+++ b/task2/Views/Journals/Index.cshtml
@@ -1,57 +1,34 @@
-﻿@model IEnumerable<task2.Models.Journal>
-
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    Layout = "~/Views/Shared/_myLayout.cshtml";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.BookName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pages)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Content)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Genre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Authors)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.BookName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Pages)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Content)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Authors)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.JournalId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.JournalId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.JournalId })
-        </td>
-    </tr>
-}
-
-</table>
+@(Html.Kendo().Grid<task2.Models.Journal>()
+          .Name("grid")
+          .Columns(columns =>
+          {
+              columns.Bound(c => c.BookName);
+              columns.Bound(c => c.Pages);
+              columns.Bound(c => c.Content);
+              columns.Bound(c => c.Genre);
+              columns.Command(command => { command.Edit(); command.Destroy(); }).Width(180);
+          })
+          .ToolBar(toolbar =>
+          {
+              toolbar.Create();
+          })
+          .Editable(editable => editable.Mode(GridEditMode.InLine))
+          .Pageable()
+          .Selectable(selectable =>
+          {
+              selectable.Mode(GridSelectionMode.Multiple);
+              selectable.Type(GridSelectionType.Row);
+          })
+          .Scrollable()
+          .DataSource(dataSource => dataSource
+              .Ajax()
+              .Model(model => model.Id(p => p.JournalId))
+              .Read(read => read.Action("Journals_Read", "Journals"))
+              .Create(create => create.Action("Journals_Create", "Journals"))
+              .Update(update => update.Action("Journals_Update", "Journals"))
+              .Destroy(destroy => destroy.Action("Journals_Destroy", "Journals"))
+          )
+)
